// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/branch ensureBranch(config) automerges successful branches 1`] = `
Object {
  "calls": Array [
    Array [
      "renovate/dummy-1.x",
      "branch-push",
    ],
  ],
  "instances": Array [
    Object {
      "branchExists": [Function],
      "commitFilesToBranch": [Function],
      "getBranchStatus": [Function],
      "getFileContent": [Function],
      "mergeBranch": [Function],
      "setBranchStatus": [Function],
    },
  ],
}
`;

exports[`workers/branch ensureBranch(config) throws error if cannot maintain yarn.lock file 1`] = `"Error maintaining lock files"`;

exports[`workers/branch ensureBranch(config) throws if automerge throws 1`] = `[Error: automerge failed]`;

exports[`workers/branch ensureBranch(config) throws if automerge throws 2`] = `
Object {
  "calls": Array [
    Array [
      "renovate/dummy-1.x",
      "branch-push",
    ],
  ],
  "instances": Array [
    Object {
      "branchExists": [Function],
      "commitFilesToBranch": [Function],
      "getBranchStatus": [Function],
      "getFileContent": [Function],
      "mergeBranch": [Function],
      "setBranchStatus": [Function],
    },
  ],
}
`;

exports[`workers/branch processBranchUpgrades(upgrades) returns if legacy closed major PR found 1`] = `
Array [
  Array [
    "renovate/a-2.x",
    "Upgrade a to v2",
  ],
  Array [
    "renovate/a-2.x",
    "Upgrade a to version 2.x",
  ],
]
`;

exports[`workers/branch processBranchUpgrades(upgrades) returns if legacy closed minor PR found 1`] = `
Array [
  Array [
    "renovate/a-2.x",
    "Upgrade a to v2.1.0",
  ],
  Array [
    "renovate/a-2.x",
    "Upgrade a to version 2.1.0",
  ],
]
`;
